--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fal-ai/client": "^1.7.2",
+    "@stripe/stripe-js": "^8.5.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-shared": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
@@ -22,6 +23,7 @@
     "react-konva": "^19.2.0",
     "react-youtube": "^10.1.0",
     "replicate": "^1.4.0",
+    "stripe": "^20.0.0",
     "uuid": "^13.0.0",
     "zustand": "^5.0.8"
   },
